[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-library-mcp-server"
version = "0.1.0"
description = "Community-driven library of tested prompts and MCP tool configurations — npm for AI agent configs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "AiAgentKarl"}]
keywords = ["mcp", "prompts", "library", "templates", "ai-agents", "community"]
dependencies = ["mcp>=1.0.0", "pydantic>=2.0.0"]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/prompt-library-mcp-server"
Repository = "https://github.com/AiAgentKarl/prompt-library-mcp-server"

[project.scripts]
prompt-library = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
